tdf#146612 Drop confirmation question when applying new doc hyperlink

To be consistent with other tabs of the dialog where Apply does
not show a similar question

Change-Id: Id3bced8ec861b7166974da5ad223513dbfec25c0